<resources>
  <!-- Globals -->
  <string name="global_todoDescription">TODO</string>
  <string name="global_progressLoading">Loading…</string>
  <!-- ActionBar -->
  <string name="actionBar_cart">Shopping Cart</string>
  <string name="actionBar_catalog">Product Catalog</string>
  <string name="actionBar_history">Order History</string>
  <string name="actionBar_profile">My Profile</string>
  <!-- BottomNavigation -->
  <string name="bottomNavigation_cart">Cart</string>
  <string name="bottomNavigation_catalog">Catalog</string>
  <string name="bottomNavigation_history">History</string>
  <string name="bottomNavigation_profile">Profile</string>
  <!-- CustomerProfile -->
  <string name="profile_cardType">Type</string>
  <string name="profile_cardValidity">Validity</string>
  <string name="profile_customerAddress1">Address 1</string>
  <string name="profile_customerAddress2">Address 2</string>
  <string name="profile_customerCreated">Created</string>
  <string name="profile_customerNif">NIF</string>
  <string name="profile_customerUpdated">Updated</string>
  <string name="profile_customerUsername">Username</string>
  <string name="profile_logout">LOGOUT</string>
  <string name="profile_qrTest">GENERATE QR</string>
  <!-- LoginActivity -->
  <string name="login_inputPassword">Password</string>
  <string name="login_inputUsername">Username</string>
  <string name="login_loginButton">Login</string>
  <string name="login_progressDialog">Authenticating…</string>
  <string name="login_registerButton">Don\'t have an account yet? Register!</string>
  <!-- MainActivity -->
  <string name="mainActivity_title">AcmeSTORE</string>
  <string name="mainActivity_prompt">Launch Play Store and install a QR code scanner activity?</string>
  <!-- OrderViewActivity -->
  <string name="order_count">#Products</string>
  <string name="order_created">Created</string>
  <string name="order_product">%1$s %2$s</string>
  <string name="order_quantity">Quantity</string>
  <string name="order_title">Order information</string>
  <string name="order_token">Token</string>
  <string name="order_updated">Updated</string>
  <!-- ProductViewActivity -->
  <string name="product_activity">Product information</string>
  <string name="product_barcode">UPC</string>
  <string name="product_description">Description</string>
  <!-- RegisterActivity -->
  <string name="register_address1">Address (street)</string>
  <string name="registerActivity_address2">Address (city/post)</string>
  <string name="registerActivity_ccNumber">Number</string>
  <string name="registerActivity_confirm">Confirm Password</string>
  <string name="registerActivity_name">Full Name</string>
  <string name="registerActivity_next">Next (Payment Method)</string>
  <string name="registerActivity_nif">Tax Number</string>
  <string name="registerActivity_password">Password</string>
  <string name="registerActivity_previous">Previous</string>
  <string name="registerActivity_register">Register</string>
  <string name="registerActivity_title">Register customer</string>
  <string name="registerActivity_username">Username</string>
  <string-array name="planets_array">
    <item>VISA</item>
    <item>Maestro</item>
    <item>Mastercard</item>
    <item>VISA Electron</item>
    <item>American Express</item>
  </string-array>
  <!-- RegisterCommon -->
  <string name="errorExpired">Your credit card has expired, please double check the expiration date!</string>
  <string name="errorMismatch">The passwords you entered do not match!</string>
  <string name="errorNif">The tax number must be exactly %1$d digits long.</string>
  <string name="errorNumber">The number you entered is not a valid %1$s card number!</string>
  <string name="errorPassword">Password must have at least %1$d alphanumeric characters.</string>
  <string name="errorRequired">This field is required.</string>
  <string name="errorUsername">Username must be at least %1$d characters long.</string>
  <!-- ShoppingCartFragment -->
  <string name="shoppingCart_checkout">CHECKOUT</string>
  <string name="shoppingCart_delete">Delete</string>
  <string name="shoppingCart_invalidQr">The code you scanned was recognized as \"%1\$s\",
    expected \"UPC_A\".</string>
  <string name="shoppingCart_minus">-</string>
  <string name="shoppingCart_name">%1$s %2$s</string>
  <string name="shoppingCart_photo">TODO</string>
  <string name="shoppingCart_plus">+</string>
  <string name="shoppingCart_quantity">10</string>
  <string name="shoppingCart_scan">SCAN BARCODE</string>
  <!-- Product Item View -->
  <string name="price">Price</string>

  <!-- -->
  <string name="confirm_purchase">Confirm purchase</string>
  <string name="product_view">View</string>
  <string name="mainActivity_refresh">Refresh</string>
  <string name="main_confirmMessage">Are you sure you want to terminate your current session and return to the login screen?</string>
    <string name="productView_barcode">Barcode</string>
    <string name="productView_description">Description</string>
    <string name="price_cart">Sub-Total</string>
    <string name="items_cart">Items</string>
  <string name="product_price">Price</string>
  <string name="product_total">Total</string>
</resources>