<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent"
  android:fitsSystemWindows="true">

  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingLeft="24dp"
    android:paddingRight="24dp"
    android:paddingTop="24dp">

    <!--
     ImageView: ACME Logotype
    -->
    <ImageView
      android:layout_width="wrap_content"
      android:layout_height="128dp"
      android:layout_gravity="center_horizontal"
      android:layout_marginBottom="16dp"
      android:src="@drawable/ic_landscape_128dp"
      android:contentDescription="@string/registerActivity_icon" />

    <!--
     TextInputLayout: Name
    -->
    <android.support.design.widget.TextInputLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginBottom="8dp"
      android:layout_marginTop="8dp">

      <EditText
        android:id="@+id/registerActivity_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/registerActivity_name"
        android:inputType="textPersonName" />
    </android.support.design.widget.TextInputLayout>

    <!--
     TextInputLayout: Username
    -->
    <android.support.design.widget.TextInputLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginBottom="8dp"
      android:layout_marginTop="8dp">

      <EditText
        android:id="@+id/registerActivity_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/registerActivity_username"
        android:inputType="textPersonName" />
    </android.support.design.widget.TextInputLayout>

    <!--
      TextInputLayout: Password
    -->
    <android.support.design.widget.TextInputLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginBottom="8dp"
      android:layout_marginTop="8dp">

      <EditText
        android:id="@+id/registerActivity_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/registerActivity_password"
        android:inputType="textPassword" />
    </android.support.design.widget.TextInputLayout>

    <!--
      TextInputLayout: Confirm Password
    -->
    <android.support.design.widget.TextInputLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginBottom="8dp"
      android:layout_marginTop="8dp">

      <EditText
        android:id="@+id/registerActivity_confirm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/registerActivity_confirm"
        android:inputType="textPassword" />
    </android.support.design.widget.TextInputLayout>

    <!--
      TextInputLayout: Street Address
    -->
    <android.support.design.widget.TextInputLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginBottom="8dp"
      android:layout_marginTop="8dp">

      <EditText
        android:id="@+id/registerActivity_address1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/registerActivity_address1"
        android:inputType="textPostalAddress" />
    </android.support.design.widget.TextInputLayout>

    <!--
      TextInputLayout: City & Postal Code
    -->
    <android.support.design.widget.TextInputLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginBottom="8dp"
      android:layout_marginTop="8dp">

      <EditText
        android:id="@+id/registerActivity_address2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/registerActivity_address2"
        android:inputType="textEmailAddress" />
    </android.support.design.widget.TextInputLayout>

    <!--
      TextInputLayout: Tax Number
    -->
    <android.support.design.widget.TextInputLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginBottom="8dp"
      android:layout_marginTop="8dp">

      <EditText
        android:id="@+id/registerActivity_nif"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/registerActivity_nif"
        android:inputType="number" />
    </android.support.design.widget.TextInputLayout>

    <!--
      Button: Register
    -->
    <android.support.v7.widget.AppCompatButton
      android:id="@+id/registerActivity_register"
      android:layout_width="fill_parent"
      android:layout_height="wrap_content"
      android:layout_marginBottom="24dp"
      android:layout_marginTop="24dp"
      android:padding="12dp"
      android:text="@string/registerActivity_register" />

    <TextView
      android:id="@+id/registerActivity_login"
      android:layout_width="fill_parent"
      android:layout_height="wrap_content"
      android:layout_marginBottom="24dp"
      android:gravity="center"
      android:text="@string/registerActivity_login"
      android:textSize="@dimen/global_mediumFont" />
  </LinearLayout>
</ScrollView>