<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="match_parent"
  android:layout_height="wrap_content"
  android:orientation="vertical"
  android:paddingEnd="@dimen/global_defaultMargin"
  android:paddingStart="@dimen/global_defaultMargin"
  android:paddingTop="@dimen/global_defaultMargin">

  <!--
    LinearLayout: Heading
  -->
  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <!--
      ImageView: Heading Icon
    -->
    <ImageView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:contentDescription="@string/registerActivity_icon"
      android:padding="@dimen/global_tinyMargin"
      android:src="@drawable/ic_person_48dp"
      android:tint="@color/bottomNavigation_iron" />

    <!--
      TextView: Heading Title
    -->
    <TextView
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:padding="@dimen/registerActivity_button"
      android:text="@string/registerActivity_heading1"
      android:textAllCaps="true"
      android:textSize="@dimen/registerActivity_heading"
      android:textStyle="bold" />
  </LinearLayout>

  <!--
   TextInputLayout: Name
  -->
  <android.support.design.widget.TextInputLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="@dimen/global_halfMargin"
    android:layout_marginTop="@dimen/global_halfMargin">

    <EditText
      android:id="@+id/registerActivity_name"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:hint="@string/registerActivity_name"
      android:inputType="textPersonName" />
  </android.support.design.widget.TextInputLayout>

  <!--
   TextInputLayout: Username
  -->
  <android.support.design.widget.TextInputLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="@dimen/global_halfMargin"
    android:layout_marginTop="@dimen/global_halfMargin">

    <EditText
      android:id="@+id/registerActivity_username"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:hint="@string/registerActivity_username"
      android:inputType="textPersonName" />
  </android.support.design.widget.TextInputLayout>

  <!--
    TextInputLayout: Password
  -->
  <android.support.design.widget.TextInputLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="@dimen/global_halfMargin"
    android:layout_marginTop="@dimen/global_halfMargin">

    <EditText
      android:id="@+id/registerActivity_password"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:hint="@string/registerActivity_password"
      android:inputType="textPassword" />
  </android.support.design.widget.TextInputLayout>

  <!--
    TextInputLayout: Confirm Password
  -->
  <android.support.design.widget.TextInputLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="@dimen/global_halfMargin"
    android:layout_marginTop="@dimen/global_halfMargin">

    <EditText
      android:id="@+id/registerActivity_confirm"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:hint="@string/registerActivity_confirm"
      android:inputType="textPassword" />
  </android.support.design.widget.TextInputLayout>

  <!--
    TextInputLayout: Street Address
  -->
  <android.support.design.widget.TextInputLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="@dimen/global_halfMargin"
    android:layout_marginTop="@dimen/global_halfMargin">

    <EditText
      android:id="@+id/registerActivity_address1"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:hint="@string/registerActivity_address1"
      android:inputType="textPostalAddress" />
  </android.support.design.widget.TextInputLayout>

  <!--
    TextInputLayout: City & Postal Code
  -->
  <android.support.design.widget.TextInputLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="@dimen/global_halfMargin"
    android:layout_marginTop="@dimen/global_halfMargin">

    <EditText
      android:id="@+id/registerActivity_address2"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:hint="@string/registerActivity_address2"
      android:inputType="textEmailAddress" />
  </android.support.design.widget.TextInputLayout>

  <!--
    TextInputLayout: Tax Number
  -->
  <android.support.design.widget.TextInputLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="@dimen/global_halfMargin"
    android:layout_marginTop="@dimen/global_halfMargin">

    <EditText
      android:id="@+id/registerActivity_nif"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:hint="@string/registerActivity_nif"
      android:inputType="number" />
  </android.support.design.widget.TextInputLayout>

  <!--
    Button: Register
  -->
  <android.support.v7.widget.AppCompatButton
    android:id="@+id/registerActivity_next"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="@dimen/global_halfMargin"
    android:drawableEnd="@drawable/ic_chevron_right_24dp"
    android:padding="@dimen/registerActivity_button"
    android:text="@string/registerActivity_next" />
</LinearLayout>