<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            card_view:cardElevation="@dimen/cardView_elevation"
            card_view:cardPreventCornerOverlap="true"
            card_view:cardUseCompatPadding="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="@dimen/global_mediumMargin">

                <TextView
                    android:id="@+id/productView_brand"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/global_smallMargin"
                    android:textSize="@dimen/productView_brand"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/productView_model"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:textSize="@dimen/productView_model" />
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            card_view:cardElevation="@dimen/cardView_elevation"
            card_view:cardPreventCornerOverlap="true"
            card_view:cardUseCompatPadding="true">

            <ImageView
                android:id="@+id/productView_photo"
                android:layout_width="match_parent"
                android:layout_height="@dimen/productView_photo"
                android:layout_margin="@dimen/global_largeMargin"
                android:contentDescription="@string/global_todoDescription" />

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            card_view:cardElevation="@dimen/cardView_elevation"
            card_view:cardPreventCornerOverlap="true"
            card_view:cardUseCompatPadding="true">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/colorAccent"
                android:paddingEnd="@dimen/global_smallMargin"
                android:paddingStart="@dimen/global_mediumMargin">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="@dimen/global_largeMargin"
                    android:layout_gravity="start"
                    android:textColor="@android:color/white"
                    android:text="@string/price" />

                <TextView
                    android:id="@+id/productView_price"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:paddingTop="@dimen/global_largeMargin"
                    android:textColor="@android:color/white"
                    android:textStyle="bold" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_weight="1" />

            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            card_view:cardElevation="@dimen/cardView_elevation"
            card_view:cardPreventCornerOverlap="true"
            card_view:cardUseCompatPadding="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="@dimen/global_mediumMargin">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/global_mediumMargin"
                    android:text="@string/productView_barcode"
                    android:textSize="@dimen/global_mediumFont"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/productView_barcode"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/global_mediumMargin"
                    android:textSize="@dimen/global_smallFont" />
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            card_view:cardElevation="@dimen/cardView_elevation"
            card_view:cardPreventCornerOverlap="true"
            card_view:cardUseCompatPadding="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="@dimen/global_mediumMargin">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/global_mediumMargin"
                    android:text="@string/productView_description"
                    android:textSize="@dimen/global_mediumFont"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/productView_description"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:lineSpacingMultiplier="1.2"
                    android:textSize="@dimen/global_smallFont" />
            </LinearLayout>
        </android.support.v7.widget.CardView>
    </LinearLayout>
</ScrollView>
